--- a/doc/scratch/item_template.pl.1
+++ b/doc/scratch/item_template.pl.1
@@ -17,6 +17,7 @@ sub GetItemTemplate { # returns HTML for outputting one item
 	# tags_list = comma-separated list of tags the item has
 	# is_textart = set <tt><code> tags for the message itself
 	# no_permalink = do not link to item's permalink page
+	# item_score = item's score
 
 	# show_easyfind = show/hide easyfind words
 	# item_type = 'txt' or 'image'
