--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,3 +1,8 @@
+puzzle solving requires modern js, which locks out older browsers
+	workaround: existing puzzle-solved user can vouch for them
+
+dark theme looks like crap in netscape 3
+
 dev_refresh does a lot of unnecessary things
 	i think checksumming of html/txt is faulty
 
